2013-01-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed _id_alert_ macro in events.
	
	Bug id: #3600223

2013-01-10  Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/mysql_plugin.sh: Added the correct exit code to plugin.

2013-01-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Merged from trunk. Save translated
	  OIDs and disable modules than can't be translated.

2013-01-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Merged from trunk.

2013-01-10  Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/PluginServer.pm: Added log traces to inform about
	problems on plugin execution with low memory.

2013-01-10  Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Rewrite my commit at rev7388 in more
	general way. logger() call was deleted here, because the corresponding
	error message is recorded by pandora_crash().

	* lib/PandoraFMS/Core.pm: Fixed that invalid regex in
	critical_str or warning_str could make server down at worst.
	Not used logger() here, because the corresponding error
        message is recorded by pandora_crash().

2013-01-09  Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Added log traces to inform
	about the problem of undefined return of snmpget command.

2013-01-09  Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Deleted some debug traces.

2013-01-09  Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Controlled an error if output of
	SNMP command is empty and fixed several error comparing port of SNMP
	as numbers instead as strings.

2013-01-09  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Detecting with entered 0 in the port
	and ignoring it.

2013-01-09 Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed a bug which creates modules